--- a/Frontend_Angular/tsconfig.json
+++ b/Frontend_Angular/tsconfig.json
@@ -3,7 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "src",
-    "outDir": "./dist/out-tsc",
+    "outDir": "../Backend_Node/angular/dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
